# C-pp-ash-Register

./: CMakeLists.txt  README.md
db/: CashRegisterDB.db
include/: article.h  books.h  clothing.h  databaseQueries.h  laptops.h  menu.h  menuFunction.h
src/: article.cpp  books.cpp  clothing.cpp  databaseQueries.cpp  laptops.cpp  main.cpp  menu.cpp  menuFunction.cpp  menuFunction.h
